--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -48,8 +48,8 @@ UIScaleRule=ShortestSide
 UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=,DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Battleground
-EditorStartupMap=/Game/Battleground
+GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/_Levels/Battleground.Battleground
 GlobalDefaultGameMode=/Game/Blueprints/BattleTankGameMode_BP.BattleTankGameMode_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
