--- a/BattleTank 4.16/Config/DefaultInput.ini
+++ b/BattleTank 4.16/Config/DefaultInput.ini
@@ -65,16 +65,20 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="AimElevation",Key=Gamepad_RightY,Scale=1.000000)
 -AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftTriggerAxis,Scale=1.000000)
 -AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
--AxisMappings=(AxisName="Left Track Throttle",Key=Three,Scale=1.000000)
--AxisMappings=(AxisName="Right Track Throttle",Key=None,Scale=1.000000)
+-AxisMappings=(AxisName="Left Track Throttle",Key=One,Scale=1.000000)
+-AxisMappings=(AxisName="Right Track Throttle",Key=Three,Scale=1.000000)
+-AxisMappings=(AxisName="Left Track Throttle",Key=Q,Scale=1.000000)
+-AxisMappings=(AxisName="Right Track Throttle",Key=E,Scale=-1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=0.250000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=0.250000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=Gamepad_RightY,Scale=1.000000)
 +AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftTriggerAxis,Scale=1.000000)
 +AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
-+AxisMappings=(AxisName="Left Track Throttle",Key=Three,Scale=1.000000)
-+AxisMappings=(AxisName="Right Track Throttle",Key=One,Scale=1.000000)
++AxisMappings=(AxisName="Left Track Throttle",Key=One,Scale=1.000000)
++AxisMappings=(AxisName="Right Track Throttle",Key=Three,Scale=1.000000)
++AxisMappings=(AxisName="Left Track Throttle",Key=Q,Scale=-1.000000)
++AxisMappings=(AxisName="Right Track Throttle",Key=E,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
