--- a/BattleTank 4.16/Config/DefaultGame.ini
+++ b/BattleTank 4.16/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=0A704CF64CC1C979C8A71984A61A15CA
+CopyrightNotice=Copyright Longboard Technology
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
-
